# hitomi

./: LICENSE  README.md  pyproject.toml
hitomi/: __init__.py
