[tool.poetry]
name = "hitomi"
version = "0.1.0"
description = "Download galleries from hitomi.la"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python =       "^3.8"
lxml =         "4.6.3"
pathvalidate = "2.4.1"
PyYAML =       "5.4.1"
requests =     "2.25.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hitomi = 'hitomi:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
